[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pywwise"
version = "0.1.7"
description = "A comprehensive Wwise Authoring API wrapper - fully documented, with auto-completion in mind."
authors = [{ name = "Matheus Vilano" }]
license = { file = "LICENSE" }
readme = "README.md"
requires-python = ">=3.12"
keywords = ["audiokinetic", "wwise", "waapi", "game", "audio", "sound", "automation", "scripting", "asset", "pipeline"]

classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Intended Audience :: Education",
    "License :: OSI Approved :: Apache Software License",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
]

dependencies = [
    "simplevent~=2.1.3",
    "waapi-client~=0.7.2"
]

[project.urls]
"Author Website" = "https://www.matheusvilano.com/"
"Git Repository" = "https://github.com/matheusvilano/PyWwise.git"

[tool.setuptools.packages]
find = { where = ["."], include = ["pywwise", "pywwise.*"] }

[tool.setuptools.package-data]
"pywwise" = ["**/*.py"]
